GNOME Bugzilla – Bug 721048
GtkColorSwatch fails to emit an accessible object:state-changed signal when it becomes toggled
Last modified: 2014-01-05 15:56:06 UTC
Created attachment 264887 [details] accessible-event listener Steps to reproduce: 1. Launch the attached accessible event listener in a terminal 2. Launch the gtk3-demo Color Chooser demo 3. Press the "Change the above color" button 4. Arrow to a desired color swatch 5. Press Space to select the active color Expected results: Some* object:state-changed event would be emitted to indicate the focused color swatch is now checked/selected/whatever. Actual results: No such event is seen. As for the "Some": I personally think object:state-changed:checked would make the most sense, in part because of check mark that appears. :) But mostly because this widget seems to be functioning like a radio button and when a radio button becomes selected we get an object:state-changed:checked event. The reason I've marked this as depending on bug 721045 is the possibility that my "radio button" belief (and corresponding role request) is bogus. In which case, we might not want the "checked" event, but something else to notify ATs (and users).